--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "perception_ins",
-  "homepage":"http://airproindia.in",
+  "homepage": "http://airproindia.in",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.3",
